Fixed initial input status
I set the "run" input to be checked by default so the animation
begins upon page loading.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
   <body>
     <div class="orb">
       <h2>BEHOLD!</h2>
-      <input type="radio" id="run" class="run" name="action" value="run" />
+      <input
+        type="radio"
+        id="run"
+        class="run"
+        name="action"
+        value="run"
+        checked
+      />
       <label class="run" for="run"> Run! </label>
 
       <input type="radio" id="cast" class="cast" name="action" value="cast" />
