Add favicon and attribution

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="sprite.css" />
+    <link rel="icon" type="favicon" href="wizard-icon.png" />
   </head>
   <body>
     <div class="orb">
@@ -49,5 +50,10 @@
 
       <div class="wizard"></div>
     </div>
+    <footer>
+      <a href="https://www.flaticon.com/free-icons/wizard" title="wizard icons"
+        >Wizard favicon created by Flat Icons - Flaticon</a
+      >
+    </footer>
   </body>
 </html>
